[package]
name = "echo-server"
version = "0.1.0"
authors = ["Jiachen Bai <646329483@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-uring = {version = "0.5.0-alpha"}
slab = "0.4.2"
anyhow = "1.0.37"
libc = "0.2.81"
